--- a/src/components/ListImageText.css
+++ b/src/components/ListImageText.css
@@ -34,7 +34,7 @@
 
 .case-card .case-image img {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 15px;
   object-fit: cover;
   margin-bottom: 1rem;
@@ -122,7 +122,7 @@
   }
 
   .case-card .case-image img {
-    width: auto;
+    width: 100%;
     height: 100%;
     box-shadow: none;
     margin: 0 auto;
