--- a/src/index.css
+++ b/src/index.css
@@ -653,6 +653,10 @@ ul {
     margin: 1.85rem 0 3.85rem 0;
   }
 
+  /* .section-title {
+    margin: 1rem 0 1rem 0;
+  } */
+
   .page-resource-body,
   .page-resource-img,
   .page-resource-overlay {
