--- a/src/components/TopNavBar.css
+++ b/src/components/TopNavBar.css
@@ -25,15 +25,16 @@ nav .nav-cnt {
 
 .breadcrump {
   position: absolute;
-  top: 110%;
-  left: 0px;
+  top: 50%;
+  left: 420px;
+  transform: translateY(-50%);
   display: flex;
   gap: 0.6rem;
   align-items: center;
   /* width: 100%; */
-  background: #ffffff;
+  background: none;
   /* background: rgba(255, 255, 255, 0.5); */
-  padding: 5px 1rem;
+  padding: 0px 1rem;
   /* backdrop-filter: blur(12px); */
   /* box-shadow: 1px 4px 7px -3px rgb(0, 0, 0, 0.23); */
   /* margin-top: 10px; */
@@ -41,11 +42,20 @@ nav .nav-cnt {
   width: auto;
 }
 
-@media (max-width: 53px) {
+@media (max-width: 1200px) {
+  .breadcrump {
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    width: 100%;
+    justify-content: center;
+  }
+}
+
+/* @media (max-width: 53px) {
   .breadcrump {
     flex-wrap: wrap;
   }
-}
+} */
 
 .breadcrump button {
   border: none;
@@ -57,10 +67,10 @@ nav .nav-cnt {
   padding: 0.3rem 0rem;
   cursor: pointer;
   font-size: 0.8rem;
+  transition: 0.5s;
 }
-
 .breadcrump button:hover {
-  background: #ffffff;
+  /* background: #ffffff; */
   color: #000000;
 }
 
