--- a/src/pages/CostRecovery.css
+++ b/src/pages/CostRecovery.css
@@ -1,69 +1,113 @@
 .cost-recovery-last-para {
-	padding: 2rem 0;
+  padding: 2rem 0;
 }
 
-@media (max-width: 649px) {
-	.costRecovery .Header3 .container {
-		padding-bottom: 0;
-	}
-
-	.container.noPTop {
-		padding-top: 1rem;
-	}
-	.cost-recovery-last-para {
-	padding: 1rem 0;
+.costRecovery .subpagehero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 1rem;
 }
+
+.costRecovery .subpagehero img {
+  height: 180px;
+  width: 100%;
+}
+
+@media (max-width: 687px) {
+  .costRecovery .Header3 .container {
+    padding-bottom: 0;
+  }
+
+  .container.noPTop {
+    padding-top: 1rem;
+  }
+  .cost-recovery-last-para {
+    padding: 1rem 0;
+  }
+  .costRecovery .subpagehero img {
+    height: 100px;
+    width: 100%;
+  }
+  .costRecovery .subpagehero {
+    text-align: center;
+  }
 }
 
 .link-text {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .costRecovery .border {
-	border: 1px dashed rgba(134, 134, 134, 0.5);
-	margin: 2rem 1rem;
+  border: 1px dashed rgba(134, 134, 134, 0.5);
+  margin: 2rem 1rem;
 }
 
 .VCard-cnt {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .v-small-text {
-	text-align: center;
-	margin    : 1rem 0 0 0;
-	font-size : 0.9375rem;
+  text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.9375rem;
 }
 
-@media (min-width: 1024px) {
-	.link-text {
-		text-align: center;
-		max-width : 90%;
-		margin    : 1rem auto;
-	}
+@media (min-width: 712px) {
+	.costRecovery .subpagehero img {
+    height: 100px;
+    width: 100%;
+  }
+}
 
-	.costRecovery .mTop2 {
-		margin: 3rem 0;
-	}
+@media (min-width: 992px) {
+	.costRecovery .subpagehero img {
+    height: 110px;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1021px) {
+  .link-text {
+    text-align: center;
+    max-width: 90%;
+    margin: 1.7rem auto;
+  }
+
+  .costRecovery .mTop2 {
+    margin: 3rem 0;
+  }
+  .costRecovery .subpagehero img {
+    height: 120px;
+    width: 100%;
+  }
 }
 
 @media (min-width: 1400px) {
-	.link-text {
-		max-width: 90%;
-		margin   : 1rem auto;
-		font-size: 1.875rem;
-	}
+  .link-text {
+    max-width: 90%;
+    margin: 1rem auto;
+    font-size: 1.875rem;
+  }
 
-	.costRecovery .mTop2 {
-		margin: 3rem 0;
-	}
+  .costRecovery .mTop2 {
+    margin: 3rem 0;
+  }
+  .costRecovery .subpagehero img {
+    height: 150px;
+    width: 100%;
+  }
 }
 
 @media (min-width: 1600px) {
-	.link-text {
-		max-width: 1480px;
-		margin   : 1rem auto;
-	}
-
-
+  .link-text {
+    max-width: 1480px;
+    margin: 1rem auto;
+  }
+  .costRecovery .subpagehero img {
+    height: 150px;
+    width: 100%;
+  }
 }
-
