--- a/src/pages/Governance.css
+++ b/src/pages/Governance.css
@@ -1,3 +1,17 @@
+.governance .subpagehero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 1rem;
+}
+
+.governance .subpagehero img {
+  height: 100px;
+  width: 100%;
+}
+
 .governance .list-title {
   font-size: 1.25rem;
   margin-bottom: 1.25rem;
@@ -11,27 +25,60 @@ p.margin-bottom {
   margin-bottom: 1.5rem;
 }
 
-@media (max-width: 767px) {
-  /* .governance .list-title,
-  .last-text {
-    text-align: center;
-  } */
+@media (mid-width: 614px) {
+  .governance .subpagehero img {
+    height: 100px;
+    width: 100%;
+  }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 659px) {
+  .Header3 .container {
+    padding: 6rem 1rem 1rem 1rem;
+  }
+  .governance .subpagehero img {
+    height: 100px;
+    width: 100%;
+  }
   .governance .list-title {
-    font-size: 1.5rem;
-    margin-bottom: 1.5rem;
+    font-size: 0.7rem;
+    margin-bottom: 0.8rem;
   }
 
   .last-text {
-    margin: 2.5rem 0;
+    margin: 1rem 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .Header3 .container {
+    padding: 8rem 1rem 2rem 1rem;
+  }
+  .governance .list-title {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .last-text {
+    margin: 2rem 0;
+  }
+  .governance .subpagehero img {
+    height: 110px;
+    width: 100%;
   }
 }
 
 @media (min-width: 992px) {
   .governance .list-title {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  .governance .list-title {
     text-align: center;
+  }
+  .governance .subpagehero img {
+    height: 100px;
+    width: 100%;
   }
 }
 
@@ -48,6 +95,10 @@ p.margin-bottom {
 }
 
 @media (min-width: 1400px) {
+  .governance .subpagehero img {
+    height: 120px;
+    width: 100%;
+  }
   .governance .list-title {
     font-size: 1.875rem;
     margin: 2rem 0 2rem 0;
@@ -55,5 +106,10 @@ p.margin-bottom {
 
   .last-text {
     margin: 4rem auto;
+  }
+
+  .governance .subpagehero img {
+    height: 110px;
+    width: 100%;
   }
 }
