--- a/src/pages/Procurement.css
+++ b/src/pages/Procurement.css
@@ -1,4 +1,26 @@
+.procurement .link-text {
+	margin-bottom: 2rem;
+}
+
+.procurement .subpagehero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 1rem;
+}
+
+.procurement .subpagehero img {
+  height: 100px;
+  width: 100%;
+}
+
 @media (max-width: 649px) {
+	.procurement .subpagehero img {
+    height: 90px;
+    width: 100%;
+  }
 	.procurement .Header3 .container {
 		padding-bottom: 0;
 	}
@@ -6,6 +28,43 @@
 	.container.noPTop {
 		padding-top: 1rem;
 	}
+	.procurement .subpagehero {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+}
+
+@media (min-width: 766px) {
+  .Header3 .container {
+    padding: 8rem 1rem 2rem 1rem;
+  }
+  .procurement .list-title {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .last-text {
+    margin: 2rem 0;
+  }
+  .procurement .subpagehero img {
+    height: 90px;
+    width: 100%;
+  }
+}
+
+@media (min-width: 919px) {
+  .procurement .list-title {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  .procurement .list-title {
+    text-align: center;
+  }
+  .procurement .subpagehero img {
+    height: 90px;
+    width: 100%;
+  }
 }
 
 .link-text {
@@ -37,25 +96,34 @@
 	.procurement .mTop2 {
 		margin: 3rem 0;
 	}
+	.procurement .subpagehero img {
+    height: 100px;
+    width: 100%;
+  }
 }
 
 @media (min-width: 1400px) {
 	.link-text {
 		max-width: 90%;
-		margin   : 1rem auto;
+		margin   : 2rem auto;
 		font-size: 1.5rem;
 	}
 
 	.procurement .mTop2 {
 		margin: 3rem 0;
 	}
+	.procurement .subpagehero img {
+    height: 120px;
+    width: 100%;
+  }
 }
 
 @media (min-width: 1600px) {
 	.link-text {
 		max-width: 1480px;
-		margin   : 1rem auto;
+		margin   : 2rem auto;
 	}
 
 
 }
+
