--- a/src/pages/TechnicalSolutions.css
+++ b/src/pages/TechnicalSolutions.css
@@ -1,3 +1,17 @@
+.technicalSolutions .subpagehero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 1rem;
+}
+
+.technicalSolutions .subpagehero img {
+  height: 180px;
+  width: 100%;
+}
+
 @media (max-width: 649px) {
   .technicalSolutions .Header3 .container {
     padding-bottom: 0;
@@ -27,6 +41,15 @@
   font-size: 0.9375rem;
 }
 
+.technicalSolutions .subpagehero img {
+  height: 80px;
+  width: 100%;
+}
+
+.technicalSolutions .subpagehero {
+  text-align: center;
+}
+
 @media (min-width: 1024px) {
   .link-text {
     text-align: center;
@@ -49,11 +72,19 @@
   .technicalSolutions .mTop2 {
     margin: 3rem 0;
   }
+  .technicalSolutions .subpagehero img {
+    height: 120px;
+    width: 100%;
+  }
 }
 
 @media (min-width: 1600px) {
   .link-text {
     max-width: 1480px;
     margin: 1rem auto;
+  }
+  .technicalSolutions .subpagehero img {
+    height: 150px;
+    width: 100%;
   }
 }
