--- a/src/pages/Procurement.css
+++ b/src/pages/Procurement.css
@@ -1,5 +1,5 @@
 .procurement .link-text {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .procurement .subpagehero {
@@ -12,30 +12,45 @@
 }
 
 .procurement .subpagehero img {
-  height: 100px;
+  height: 180px;
   width: 100%;
 }
 
-@media (max-width: 649px) {
-	.procurement .subpagehero img {
-    height: 90px;
+@media (min-width: 200px) {
+  .procurement .subpagehero img {
+    height: 100px;
     width: 100%;
   }
-	.procurement .Header3 .container {
-		padding-bottom: 0;
-	}
-
-	.container.noPTop {
-		padding-top: 1rem;
-	}
-	.procurement .subpagehero {
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
+  .procurement .subpagehero {
+    align-items: center;
+  }
 }
 
-@media (min-width: 766px) {
+@media (min-width: 649px) {
+  .procurement .subpagehero {
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .procurement .subpagehero img {
+    height: 100px;
+    width: 100%;
+  }
+  .procurement .Header3 .container {
+    padding-bottom: 0;
+  }
+
+  .container.noPTop {
+    padding-top: 1rem;
+  }
+  .procurement .subpagehero {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 724px) {
   .Header3 .container {
     padding: 8rem 1rem 2rem 1rem;
   }
@@ -62,68 +77,65 @@
     text-align: center;
   }
   .procurement .subpagehero img {
-    height: 90px;
+    height: 110px;
     width: 100%;
   }
 }
 
 .link-text {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .procurement .border {
-	border: 1px dashed rgba(134, 134, 134, 0.5);
-	margin: 2rem 1rem;
+  border: 1px dashed rgba(134, 134, 134, 0.5);
+  margin: 2rem 1rem;
 }
 
 .VCard-cnt {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .v-small-text {
-	text-align: center;
-	margin    : 1rem 0 0 0;
-	font-size : 0.9375rem;
+  text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.9375rem;
 }
 
 @media (min-width: 1024px) {
-	.link-text {
-		text-align: center;
-		max-width : 90%;
-		margin    : 1rem auto;
-	}
+  .link-text {
+    text-align: center;
+    max-width: 90%;
+    margin: 1rem auto;
+  }
 
-	.procurement .mTop2 {
-		margin: 3rem 0;
-	}
-	.procurement .subpagehero img {
-    height: 100px;
+  .procurement .mTop2 {
+    margin: 3rem 0;
+  }
+  .procurement .subpagehero img {
+    height: 120px;
     width: 100%;
   }
 }
 
 @media (min-width: 1400px) {
-	.link-text {
-		max-width: 90%;
-		margin   : 2rem auto;
-		font-size: 1.5rem;
-	}
+  .link-text {
+    max-width: 90%;
+    margin: 2rem auto;
+    font-size: 1.5rem;
+  }
 
-	.procurement .mTop2 {
-		margin: 3rem 0;
-	}
-	.procurement .subpagehero img {
+  .procurement .mTop2 {
+    margin: 3rem 0;
+  }
+  .procurement .subpagehero img {
     height: 120px;
     width: 100%;
   }
 }
 
 @media (min-width: 1600px) {
-	.link-text {
-		max-width: 1480px;
-		margin   : 2rem auto;
-	}
-
-
+  .link-text {
+    max-width: 1480px;
+    margin: 2rem auto;
+  }
 }
-
