--- a/src/pages/ResourceLibrary.css
+++ b/src/pages/ResourceLibrary.css
@@ -1,389 +1,394 @@
 .resourceLibrary {
-	background     : url('images/resourceLibrary.png') no-repeat scroll 0 0 transparent;
-	background-size: cover;
-	padding-top    : 60px;
-	padding-bottom : 60px;
-	width          : 100%;
-	min-height     : 100vh;
+  background: url("images/resourceLibrary.png") no-repeat scroll 0 0 transparent;
+  background-size: cover;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  width: 100%;
+  min-height: 100vh;
 }
 
 .resource_page .circle-bg {
-	height    : 570px;
-	width     : 25%;
-	overflow  : hidden;
-	position  : absolute;
-	top       : 50%;
-	left      : 0;
-	margin-top: -250px;
+  height: 570px;
+  width: 25%;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -250px;
 }
 
 .resource_page .circle-bg img {
-	width    : 570px;
-	height   : 570px;
-	display  : block;
-	max-width: none;
-	opacity  : 0.5;
-	position : absolute;
-	right    : 0;
+  width: 570px;
+  height: 570px;
+  display: block;
+  max-width: none;
+  opacity: 0.5;
+  position: absolute;
+  right: 0;
 }
 
 .resourceLibrary .sub-text {
-	font-size : 1.364rem;
-	margin-top: 1.364rem;
+  font-size: 1.364rem;
+  margin-top: 1.364rem;
 }
 
 .resource-carousel-container {
-	margin  : 0 auto;
-	position: relative;
+  margin: 0 auto;
+  position: relative;
 }
 
 .resource-carousel-wrapper {
-	overflow      : hidden;
-	height        : auto;
-	margin        : 0 auto;
-	position      : relative;
-	padding-bottom: 30px;
+  overflow: hidden;
+  height: auto;
+  margin: 0 auto;
+  position: relative;
+  padding-bottom: 30px;
 }
 
 .resource-carousel-track {
-	display   : flex;
-	transition: transform 0.5s ease;
-	width     : 100%;
+  display: flex;
+  transition: transform 0.5s ease;
+  width: 100%;
 }
 
 .resource-carousel-slide {
-	min-width : 100%;
-	padding   : 1.3rem 0 0 0rem;
-	box-sizing: border-box;
-	position  : relative;
+  min-width: 100%;
+  padding: 1.3rem 0 0 0rem;
+  box-sizing: border-box;
+  position: relative;
 }
 
 .resource-carousel-footer {
-	display        : flex;
-	justify-content: space-between;
-	align-items    : center;
-	margin         : 20px auto 0;
-	max-width      : 900px;
-	padding        : 0 25px;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px auto 0;
+  max-width: 900px;
+  padding: 0 25px;
 }
 
 .resource-carousel-dots {
-	display        : flex;
-	gap            : 0.5rem;
-	align-items    : center;
-	justify-content: center;
-	width          : 100%;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .resource-carousel-container .dot {
-	width        : 20px;
-	height       : 6px;
-	background   : #A3A3A3;
-	border-radius: 6px;
-	cursor       : pointer;
-	transition   : background 0.3s;
+  width: 20px;
+  height: 6px;
+  background: #a3a3a3;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.3s;
 }
 
 .resource-carousel-container .dot.active {
-	background: var(--color-primary);
-	transform : scale(1.2);
+  background: var(--color-primary);
+  transform: scale(1.2);
 }
 
 .resource-carousel-btn {
-	background     : #fff;
-	color          : #000;
-	border         : none;
-	font-size      : 1.2rem;
-	border-radius  : 50%;
-	width          : 40px;
-	height         : 40px;
-	display        : flex;
-	justify-content: center;
-	align-items    : center;
-	cursor         : pointer;
-	z-index        : 10;
-	box-shadow     : 0px 10px 30px rgba(0, 0, 0, 0.16);
-	flex-shrink    : 0
+  background: #fff;
+  color: #000;
+  border: none;
+  font-size: 1.2rem;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 10;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.16);
+  flex-shrink: 0;
 }
 
-
 .resource-carousel-container .icon-next {
-	padding-left: 5px;
+  padding-left: 5px;
 }
 
 .resource-carousel-container .icon-back {
-	padding-right: 5px;
+  padding-right: 5px;
 }
 
 .resource-carousel-btn:disabled {
-	background: #ccc;
-	cursor    : not-allowed;
-	color     : #A3A3A3;
+  background: #ccc;
+  cursor: not-allowed;
+  color: #a3a3a3;
 }
 
 .resource-carousel-btn:not(.disabled):hover {
-	background: var(--color-primary);
-	color     : #fff;
+  background: var(--color-primary);
+  color: #fff;
 }
 
-
 .mark-cmp {
-	display        : flex;
-	justify-content: flex-start;
-	align-items    : center;
-	gap            : 10px;
-	width          : 110px;
-	cursor         : pointer;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  width: 110px;
+  cursor: pointer;
 }
 
 .mark-cmp .chk-box {
-	width        : 26px;
-	height       : 26px;
-	border       : 2px solid #634075;
-	border-radius: 6px;
-	flex-shrink  : 0;
+  width: 26px;
+  height: 26px;
+  border: 2px solid #634075;
+  border-radius: 6px;
+  flex-shrink: 0;
 }
 
 .mark-cmp .lb {
-	font-size: 14px;
+  font-size: 14px;
 }
 
 .resource-card {
-	width        : 350px;
-	height       : 350px;
-	border-radius: 23px;
-	overflow     : hidden;
-	box-shadow   : 0px 15px 40px rgba(63, 68, 68, 0.4);
-	position     : relative;
+  width: 350px;
+  height: 350px;
+  border-radius: 23px;
+  overflow: hidden;
+  box-shadow: 0px 15px 40px rgba(63, 68, 68, 0.4);
+  position: relative;
 }
 
 .resource-card .card-bg {
-	position      : absolute;
-	left          : 0;
-	top           : 0;
-	z-index       : 1;
-	pointer-events: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  pointer-events: none;
 }
 
-
-
 .resource-card .card-data {
-	position: relative;
-	z-index : 2;
-	width   : 350px;
-	height  : 350px;
-
+  position: relative;
+  z-index: 2;
+  width: 350px;
+  height: 350px;
 }
 
 .resource-card .content {
-	width                  : 350px;
-	height                 : 222px;
-	border-radius          : 24px;
-	backdrop-filter        : blur(11px);
-	-webkit-backdrop-filter: blur(11px);
-	position               : absolute;
-	left                   : 0;
-	bottom                 : 0;
-	z-index                : 2;
-	padding                : 10px 24px;
-	background             : rgb(255 255 255 / 60%);
+  width: 350px;
+  height: 222px;
+  border-radius: 24px;
+  backdrop-filter: blur(11px);
+  -webkit-backdrop-filter: blur(11px);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  padding: 10px 24px;
+  background: rgb(255 255 255 / 60%);
 }
 
 .resource-card .content.cat-2 {
-	backdrop-filter        : blur(11px) brightness(1.5);
-	-webkit-backdrop-filter: blur(11px) brightness(1.5);
+  backdrop-filter: blur(11px) brightness(1.5);
+  -webkit-backdrop-filter: blur(11px) brightness(1.5);
 }
 
 .resource-card .content.cat-3 {
-	backdrop-filter        : blur(11px) brightness(1.5);
-	-webkit-backdrop-filter: blur(11px) brightness(1.5);
+  backdrop-filter: blur(11px) brightness(1.5);
+  -webkit-backdrop-filter: blur(11px) brightness(1.5);
 }
 
 .resource-card .top-section {
-	height  : 130px;
-	position: relative;
+  height: 130px;
+  position: relative;
 }
 
 .resource-card .tag {
-	position   : absolute;
-	top        : 17px;
-	right      : 10px;
-	color      : #fff;
-	font-size  : 0.8rem;
-	font-weight: bold;
-	text-align : right;
-	line-height: 1.2;
-	text-shadow: 0px 2px 5px rgba(0, 0, 0, 1);
-	width      : 180px;
+  position: absolute;
+  top: 17px;
+  right: 10px;
+  color: #fff;
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-align: right;
+  line-height: 1.2;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 1);
+  width: 180px;
 }
 
-
 .resource-card .title {
-	font-size    : 1.1rem;
-	font-weight  : bold;
-	color        : #3C4242;
-	margin-bottom: 8px;
-	line-height  : 1.3;
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #3c4242;
+  margin-bottom: 8px;
+  line-height: 1.3;
 }
 
 .resource-card .description {
-	font-size    : 12px;
-	color        : #666;
-	margin-bottom: 12px;
-	line-height  : 1.4;
+  font-size: 12px;
+  color: #666;
+  margin-bottom: 12px;
+  line-height: 1.4;
 }
 
 .resource-card .bottom-row {
-	display        : flex;
-	justify-content: space-between;
-	align-items    : center;
-	position       : absolute;
-	left           : 24px;
-	bottom         : 15px;
-	width          : 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  left: 24px;
+  bottom: 15px;
+  width: 300px;
 }
 
 .resource-card .play-button {
-	background   : #634075;
-	color        : #fff;
-	box-shadow   : 0px 10px 30px #9DB0AC;
-	border-radius: 25px;
-	padding      : 14px 32px;
-	font-size    : 0.809rem;
-	cursor       : pointer;
-	border       : none;
+  background: #634075;
+  color: #fff;
+  box-shadow: 0px 10px 30px #9db0ac;
+  border-radius: 25px;
+  padding: 14px 32px;
+  font-size: 0.809rem;
+  cursor: pointer;
+  border: none;
 }
 
 .resource-card .play-button:not(.disabled):hover {
-	background-color: var(--hover)
+  background-color: var(--hover);
 }
 
 .resource-card .play-button.disabled {
-	background: #ccc;
-	cursor    : not-allowed;
-	color     : #b3acac;
+  background: #ccc;
+  cursor: not-allowed;
+  color: #b3acac;
 }
 
 .filter-cnt {
-	max-width      : 1000px;
-	display        : flex;
-	justify-content: center;
-	align-items    : center;
-	margin         : 0 auto;
-	width          : auto;
-	gap            : 13px;
-	position       : relative;
+  max-width: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: auto;
+  gap: 13px;
+  position: relative;
 }
 
 .no-resource {
-	text-align: center;
-	font-size : 1rem;
-	margin    : 10px 0;
+  text-align: center;
+  font-size: 1rem;
+  margin: 10px 0;
 }
 
 .resource-card .status-label {
-	color: #333;
+  color: #333;
 }
 
 .principles-btn-cnt {
-	display        : flex;
-	justify-content: center;
-	align-items    : center;
-	flex-wrap      : wrap;
-	gap            : 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .principle_btn.selected {
-	background-color: var(--color-primary);
+  background-color: var(--color-primary);
 }
 
 .search-box {
-	position : relative;
-	width    : 100%;
-	max-width: 610px;
+  position: relative;
+  width: 100%;
+  max-width: 610px;
 }
 
 .search-box input {
-	position     : relative;
-	border-radius: 30px;
-	border       : none;
-	padding      : 12px 39px 11px 10px;
-	width        : 100%;
-	max-width    : 610px;
-	border       : 1px solid transparent
+  position: relative;
+  border-radius: 30px;
+  border: none;
+  padding: 12px 39px 11px 10px;
+  width: 100%;
+  max-width: 610px;
+  border: 1px solid transparent;
 }
 
 .search-box button {
-	width           : 36px;
-	height          : 36px;
-	background-color: var(--color-primary);
-	border          : none;
-	color           : #fff;
-	border-radius   : 50%;
-	position        : absolute;
-	right           : 2px;
-	top             : 2px;
+  width: 36px;
+  height: 36px;
+  background-color: var(--color-primary);
+  border: none;
+  color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  right: 2px;
+  top: 2px;
 }
 
 .resource-card-container {
-	display              : grid;
-	grid-template-columns: 1fr;
-	gap                  : 1rem;
-	justify-content      : center;
-	margin               : 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 @media (min-width: 640px) {
-	.resource-card-container {
-		grid-template-columns: repeat(2, 1fr);
-		gap                  : 1rem;
-	}
-
-
+  .resource-card-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
 }
 
 @media (min-width: 992px) {
-	.resource-card-container {
-		grid-template-columns: repeat(3, 1fr);
-		gap                  : 1.25rem;
-	}
+  .resource-card-container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.25rem;
+  }
 
-	.resource-carousel-container .dot {
-		width: 25px;
-	}
+  .resource-carousel-container .dot {
+    width: 25px;
+  }
 }
 
 @media (min-width: 1200px) {
+  .resource_page .circle-bg {
+    height: 560px;
+    width: 360px;
+    top: 0px;
+    left: -180px;
+    margin-top: 0;
+  }
 
-	.resource_page .circle-bg {
-		height    : 560px;
-		width     : 360px;
-		top       : 0px;
-		left      : -180px;
-		margin-top: 0;
-	}
-
-	.resource_page .circle-bg img {
-		width : 570px;
-		height: 570px;
-	}
+  .resource_page .circle-bg img {
+    width: 570px;
+    height: 570px;
+  }
 }
 
 @media (min-width: 1600px) {
-	.search-box input {
-		height   : 50px;
-		font-size: 1.25rem;
-	}
+  .search-box input {
+    height: 50px;
+    font-size: 1.25rem;
+  }
 
-	.search-box button {
-		width    : 48px;
-		height   : 48px;
-		font-size: 20px;
-	}
+  .search-box button {
+    width: 48px;
+    height: 48px;
+    font-size: 20px;
+  }
 
-	.principles-btn-cnt>button {
-		border-radius: 34px;
-		padding      : 13px 20px;
-	}
+  .principles-btn-cnt > button {
+    border-radius: 34px;
+    padding: 13px 20px;
+  }
 }
+
+/* added */
+.principles-btn .btn.primary {
+  display: inline-flex;        
+  align-items: center;        
+  justify-content: center;     
+  gap: 8px;                   
+}
+
+.principles-btn-cnt .icon-arrow {
+  font-size: 1rem;
+  line-height: 1;
+}
+
+
