--- a/src/components/FilterDropDown.css
+++ b/src/components/FilterDropDown.css
@@ -1,101 +1,126 @@
-.filter-dropdown {}
+.filter-dropdown {
+  display: flex;
+  gap: 13px;
+}
 
 .filter-dropdown_toggle {
-	border-radius   : 25px;
-	cursor          : pointer;
-	width           : 105px;
-	height          : 38px;
-	border          : none;
-	background-color: #ffffff;
-	color           : #000000;
-	font-size       : 0.809rem;
-	position        : relative;
-
+  border-radius: 25px;
+  cursor: pointer;
+  width: 105px;
+  height: 38px;
+  border: none;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 0.809rem;
+  position: relative;
 }
 
 .filter-dropdown_menu {
-	position     : absolute;
-	top          : 50px;
-	left         : 0;
-	background   : #fff;
-	border       : 1px solid #ccc;
-	border-radius: 16px;
-	box-shadow   : 0px 15px 40px rgba(63, 68, 68, 0.4);
-	padding      : 1rem;
-	z-index      : 1000;
-	display      : flex;
-	width        : 100%;
-	gap          : 10px;
-	flex-wrap    : wrap;
-	max-width    : 1000px;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 16px;
+  box-shadow: 0px 15px 40px rgba(63, 68, 68, 0.4);
+  padding: 1rem;
+  z-index: 1000;
+  display: flex;
+  width: 1240px;
+  gap: 10px;
+  flex-wrap: wrap;
+  max-width    : 100%;
 }
 
 .filter-dropdown_item {
-	display     : block;
-	margin      : 5px 0 7px 0;
-	cursor      : pointer;
-	position    : relative;
-	padding-left: 22px;
-	font-size   : 0.8rem;
+  display: block;
+  margin: 5px 0 7px 0;
+  cursor: pointer;
+  position: relative;
+  padding-left: 22px;
+  font-size: 0.8rem;
+  width: 200px;
 }
 
 .filter-dropdown input {
-	margin-right: 5px;
-	position    : absolute;
-	left        : 0;
-	top         : 0;
-	width       : 15px;
-	height      : 15px;
+  margin-right: 5px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 15px;
+  height: 15px;
 }
 
 .category-cnt {
-	width: 47%;
+  width: 230px;
 }
 
 .filter-dropdown_category {
-	margin     : 0 0 10px 0;
-	font-size  : 0.9rem;
-	font-weight: bold;
+  margin: 0 0 10px 0;
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .filter-dropdown_divider {
-	margin    : 10px 0;
-	border    : none;
-	border-top: 1px solid #eee;
+  margin: 10px 0;
+  border: none;
+  border-top: 1px solid #eee;
 }
 
 .filter-count {
-	position       : absolute;
-	right          : 0;
-	top            : -6px;
-	background     : red;
-	color          : #fff;
-	width          : 17px;
-	height         : 17px;
-	border-radius  : 50%;
-	display        : flex;
-	justify-content: center;
-	align-items    : center;
-	font-size      : 15px;
+  position: absolute;
+  right: 0;
+  top: -6px;
+  background: red;
+  color: #fff;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
 }
 
 @media (min-width: 600px) {
-	.filter-dropdown_item {
-		font-size: 1rem;
-	}
-
+  .filter-dropdown_item {
+    font-size: 1rem;
+  }
 }
 
-@media (min-width: 600px) {
-	.category-cnt {
-		width: auto;
-	}
-}
+/* @media (min-width: 600px) {
+  .category-cnt {
+    width: auto;
+  }
+} */
 
 @media (min-width: 1600px) {
-	.filter-dropdown_toggle {
-		height   : 50px;
-		font-size: 20px;
-		width    : 145px;
-	}
+  .filter-dropdown_toggle {
+    height: 50px;
+    font-size: 20px;
+    width: 145px;
+  }
+}
+
+@media (max-width: 1125px) {
+  .filter-dropdown_menu {
+    width: 100%;
+  }
+  .filter-dropdown_item {
+    /* width: 300px; */
+  }
+}
+
+@media (max-width: 1125px) {
+  .filter-dropdown_item {
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .filter-dropdown_item,
+  .category-cnt {
+    width: 100%;
+  }
 }
