--- a/src/components/CardBox.css
+++ b/src/components/CardBox.css
@@ -1,171 +1,221 @@
- /* dimming overlay */
- .box-card {
- 	position           : relative;
- 	border-radius      : 14px;
- 	overflow           : hidden;
- 	background-size    : cover;
- 	background-position: center;
- 	min-height         : auto;
- 	max-width          : 603px;
- 	box-shadow         : 0 6px 20px rgba(8, 30, 45, 0.08);
- 	transition         : transform .28s ease,
- 		box-shadow .28s ease;
- }
+/* dimming overlay */
+.box-card {
+  position: relative;
+  border-radius: 14px;
+  /* overflow: hidden; */
+  background-size: cover;
+  background-position: center;
+  min-height: auto;
+  max-width: 603px;
+  box-shadow: 0 6px 20px rgba(8, 30, 45, 0.08);
+  transition: transform 0.28s ease, box-shadow 0.28s ease;
+}
 
- .box-card .card-data {
- 	position: absolute;
- 	z-index : 8;
- 	inset   : 0;
- 	padding : 0.8rem;
+.resource_page .box-card  {
+  height: 350px;
+}
 
- }
+.highlighted {
+  border: 6px solid #fdb714;
+  box-sizing: border-box;
+  position: relative;
+}
 
- .box-card .card-type {
- 	color        : #fff;
- 	font-size    : 0.7rem;
- 	margin-bottom: 8px;
- }
+.highlighted-badge {
+  position: absolute;
+  top: -13px;
+  right: 2rem;
+  z-index: 5;
+  background: url("images/Spotlight_highlight_BG.png") no-repeat;
+  background-size: 100% 100%;
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem;
+  gap: 5px;
+  padding: 1px 22px 3px 20px;
+}
 
- .box-card .card-title {
- 	color      : #fff;
- 	font-size  : 1rem;
- 	font-weight: normal;
- }
+.box-card .card-data {
+  position: absolute;
+  z-index: 8;
+  inset: 0;
+  padding: 1.8rem;
+}
+.card-link {
+  height: 100%;
+}
 
- .box-card .card-overlay {
- 	position  : absolute;
- 	inset     : 0;
- 	background: rgb(0, 0, 0, 0.5);
- 	transition: background .3s;
- 	z-index   : 5;
- }
+.box-card .card-body img {
+  border-radius: 10px;
+  height: 100%;
+  object-fit: cover;
+}
 
- .box-card .card-body {
- 	position       : relative;
- 	z-index        : 2;
- 	display        : flex;
- 	flex-direction : column;
- 	justify-content: space-between;
- 	width          : 100%;
- }
+.box-card .card-type {
+  color: #fff;
+  font-size: 0.7rem;
+  margin-bottom: 8px;
+}
+
+.box-card .card-title {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: normal;
+}
+
+.resource_page .box-card .card-title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; /* number of lines */
+  overflow: hidden;
+}
+
+.box-card .card-overlay {
+  position: absolute;
+  inset: 0;
+  background: rgb(0, 0, 0, 0.5);
+  transition: background 0.3s;
+  z-index: 5;
+  border-radius: 10px;
+}
+
+.box-card .card-body {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+.box-card .btn {
+  position: absolute;
+  left: 12px;
+  bottom: 12px;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  transition: transform 0.18s, background 0.18s;
+  min-height: 32px;
+}
+
+.box-card .btn.video_btn {
+  left: auto;
+  right: 12px;
+}
+
+.box-card:hover,
+.box-card:focus-within {
+  transform: translateY(-6px);
+  box-shadow: 0 18px 36px rgba(8, 30, 45, 0.16);
+}
+
+.box-card:hover .card-arrow {
+  transform: translateX(6px);
+  background: rgba(255, 255, 255, 0.16);
+}
+
+.card-btn-cnt.twoBtn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.box-card .icon-video {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+}
+
+.video_btn:hover .icon-video {
+  color: #fff;
+  border-color: #fff;
+}
+
+/* Rounded corners larger on large screens */
+@media (min-width: 600px) {
+  .box-card .card-type {
+    font-size: 0.9rem;
+  }
+
+  .box-card .card-title {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 640px) {
+  .box-card .card-title {
+    font-size: 1.2rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .box-card .card-title {
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .box-card .card-title {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .box-card .card-title {
+    font-size: 1.5625rem;
+  }
+
+  .box-card {
+    border-radius: 35px;
+  }
+
+  .box-card .card-body img {
+    border-radius: 30px;
+  }
+
+  .box-card .card-overlay {
+    border-radius: 30px;
+  }
+
+  .box-card .card-data {
+    padding: 2.3rem;
+  }
+
+  .box-card .card-type {
+    font-size: 1rem;
+  }
+
+  .box-card .card-type {
+    margin-bottom: 20px;
+  }
+
+  .box-card .btn {
+    left: 38px;
+    bottom: 38px;
+  }
+
+  .box-card .btn {
+    border-radius: 34px;
+    padding: 13px 20px;
+  }
+
+  .box-card .btn.video_btn {
+    right: 38px;
+  }
+}
 
 
-
- .box-card .btn {
- 	position       : absolute;
- 	left           : 12px;
- 	bottom         : 12px;
- 	z-index        : 3;
- 	display        : flex;
- 	align-items    : center;
- 	justify-content: center;
- 	gap            : 10px;
- 	transition     : transform .18s, background .18s;
- 	min-height     : 32px;
- }
-
- .box-card .btn.video_btn {
- 	left : auto;
- 	right: 12px;
-
- }
-
- .box-card:hover,
- .box-card:focus-within {
- 	transform : translateY(-6px);
- 	box-shadow: 0 18px 36px rgba(8, 30, 45, 0.16);
- }
-
-
- .box-card:hover .card-arrow {
- 	transform : translateX(6px);
- 	background: rgba(255, 255, 255, 0.16);
- }
-
- .card-btn-cnt.twoBtn {
- 	display        : flex;
- 	justify-content: space-between;
- 	align-items    : center;
- }
-
- .box-card .icon-video {
- 	width          : 20px;
- 	height         : 20px;
- 	border         : 1px solid #000;
- 	border-radius  : 50%;
- 	display        : flex;
- 	justify-content: center;
- 	align-items    : center;
- 	font-size      : 10px;
- }
-
- .video_btn:hover .icon-video {
- 	color       : #fff;
- 	border-color: #fff;
- }
-
- /* Rounded corners larger on large screens */
- @media (min-width:600px) {
-
- 	.box-card .card-type {
- 		font-size: 0.9rem;
- 	}
-
- 	.box-card .card-title {
- 		font-size: 1.25rem;
- 	}
- }
-
- @media (min-width:640px) {
- 	.box-card .card-title {
- 		font-size: 1.20rem;
- 	}
- }
-
- @media (min-width: 992px) {
- 	.box-card .card-title {
- 		font-size: 1.10rem;
- 	}
- }
-
- @media (min-width: 1200px) {
- 	.box-card .card-title {
- 		font-size: 1.25rem;
- 	}
- }
-
- @media (min-width: 1600px) {
- 	.box-card .card-title {
- 		font-size: 1.5625rem;
- 	}
-
- 	.box-card {
- 		border-radius: 35px;
- 	}
-
- 	.box-card .card-data {
- 		padding: 2.3rem;
- 	}
-
- 	.box-card .card-type {
- 		font-size: 1rem;
- 	}
-
- 	.box-card .card-type {
- 		margin-bottom: 20px;
- 	}
-
- 	.box-card .btn {
- 		left  : 38px;
- 		bottom: 38px;
- 	}
-
- 	.box-card .btn {
- 		border-radius: 34px;
- 		padding      : 13px 20px;
- 	}
-
- 	.box-card .btn.video_btn {
- 		right: 38px;
- 	}
- }
+@media (max-width: 1000px) {
+  .resource_page .box-card  {
+  height: 300px;
+}
+}
