--- a/src/pages/ResourceLibrary.css
+++ b/src/pages/ResourceLibrary.css
@@ -50,6 +50,17 @@
   transition: transform 0.5s ease;
   width: 100%;
 }
+.top_resource_page {
+  padding: 1rem 0;
+}
+
+.top_resource_page .resource_page {
+  padding: 0 2rem;
+}
+
+.col-2 {
+  grid-template-columns: repeat(1, 1fr);
+}
 
 .resource-carousel-slide {
   min-width: 100%;
@@ -322,7 +333,7 @@
 .resource-card-container {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
+  gap: 2rem;
   justify-content: center;
   margin: 0 auto;
 }
@@ -331,6 +342,23 @@
   .resource-card-container {
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
+  }
+  .top_resource_page {
+    padding: 3rem 0;
+  }
+  .top_resource_page .resource_page {
+    padding: 0 2rem 2rem 2rem;
+  }
+  .top_resource_page .col-2 {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+  .top_resource_page .col-2 .box-card:nth-child(odd) {
+    justify-self: end;
+  }
+
+  .top_resource_page .col-2 .box-card:nth-child(even) {
+    justify-self: start;
   }
 }
 
